name:                ReflexPong
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Chobbes/ReflexPong#readme
license:             BSD3
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           Calvin Beck (2016)
category:            Misc
build-type:          Simple
cabal-version:       >=1.10

executable ReflexPong
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reflex >= 0.4 && < 0.5
                     , reflex-gloss >= 0.2 && < 0.3
                     , gloss >= 1.9.4.1 && < 1.10
  other-modules:       Constants
                     , Physics
                     , Rendering
